# seabird

./: .gitattributes  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  .~lock.CONTRIBUTING.rst#  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE.rst  MANIFEST.in  Makefile  NEWS.txt  README.rst  VERSION  aer205.cnv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml
binder/: environment.yml
doc/: Makefile
doc/source/: index.rst
docs/: make.bat
docs/notebooks/: BasicsReadingData.ipynb  ProcessingData.ipynb  QualityControl.ipynb
docs/source/: commandline.rst  conf.py  getting_started.rst  index.rst  install.rst  overview.rst
sampledata/CTD/: SK287_CTD05.cnv  missing_whitespace.cnv
sampledata/TSG/: TSG_PIR_010.cnv
sampledata/btl/: MI18MHDR.btl
seabird/: __init__.py  checks.py  cli.py  cnv.py  exceptions.py  netcdf.py  qc.py  utils.py
seabird/rules/: cnv.json  cnv.yaml  cnv2.json  cnv3.json  cnv4.json  cnv_binary.json  cnv_binary.yaml  cnv_btl.json  refnames.json  refnames.yaml
seabird/test/: dummydata.py  test_parse.py  test_rules.py  test_serialize.py
src/cnv/: __init__.py  cnv.py  netcdf.py
src/cnv/rules/: cnv.yaml  refnames.yaml
src/rules/: cnv.yaml
src/seabird/: __init__.py  checks.py  cnv.py  netcdf.py  utils.py
src/seabird/rules/: cnv.yaml
test_data/: dPIRX003.cnv
tests/: test_import.py  test_parse.py  test_rules.py  test_serialize.py
tests/data/CTD/: Hotin.cnv  PIRA001.cnv  dPIRX010.cnv  sta0860.cnv
tests/data/TSG/: TSG_PIR_001.cnv
